<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activity.SandwichActivity">

    <LinearLayout
        android:id="@+id/sandwich_list_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <ListView
            android:id="@+id/favorite_sandwiches_listview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            tools:visibility="gone" />

        <Button
            android:id="@+id/add_sandwich_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_sandwich" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/sandwich_inputs_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <EditText
            android:id="@+id/sandwich_name"
            android:layout_width="333dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/input_sandwich_name_here"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="127dp"
            android:layout_height="wrap_content"
            android:text="@string/submit" />



    </LinearLayout>

    <LinearLayout
        android:id="@+id/add_sandwich_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            android:id="@+id/header1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_a_predefined_sandwich" />

        <ListView
            android:id="@+id/predefined_sandwiches_listview"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="10"
            tools:visibility="gone" />

        <TextView
            android:id="@+id/header2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_a_new_sandwich" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/grinder_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grinder"
                tools:layout_editor_absoluteX="225dp"
                tools:layout_editor_absoluteY="566dp" />

            <Button
                android:id="@+id/wrap_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wrap"
                tools:layout_editor_absoluteX="79dp"
                tools:layout_editor_absoluteY="566dp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>